alterando o nome das imagens e colocando os alts

--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
             <div>
 
                 <div>
-                    <img src="./img/d091426974da40f78a83c72f0f2d8d89 (2).png" alt="Imagem da Logo">
+                    <img src="./img/logo.png" alt="Imagem da Logo">
                 </div>
 
                 <div>
@@ -51,14 +51,14 @@
                     <p>O Potencial <br>
                         Fotovoltaico Brasileiro <br>
                         é Enorme!</p>
-                    <img src="./img/nnn.jpg" alt=""> <br>
-                    <img src="./img/220px-Energia_Eolica.webp" alt="">
+                    <img src="./img/mapa.jpg" alt="Foto ilustrativa de um mapa"> <br>
+                    <img src="./img/220px-Energia_Eolica.webp" alt="Foto ilustrativa Energia Eolica">
                 </div>
     
                 <div>
                     <p>Economia Verde: Integrando Desenvolvimento Econômico, <br>
                         Preservação Ambiental e Inclusão Social</p>
-                    <img src="./img/leve_energia_economia_verde.jpg" alt="">
+                    <img src="./img/leve_energia_economia_verde.jpg" alt="Foto ilustrativa Economia Verde">
                     <p>O ano de 2022 foi marcado pelo avanço da energia <br>
                         renovável no Brasil. O país ultrapassou o marco de <br>
                         92% de participação de usinas hidrelétricas, eólicas, <br>
