--- a/cadastre-se.html
+++ b/cadastre-se.html
@@ -13,7 +13,7 @@
         <div>
 
             <div>
-                <img src="./img/d091426974da40f78a83c72f0f2d8d89 (2).png" alt="Imagem da Logo">
+                <img src="./img/logo.png" alt="Imagem da Logo">
             </div>
 
             <div>
