--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <section>
             <div>
-                <img src="./img/d091426974da40f78a83c72f0f2d8d89 (2).png" alt="Imagem da Logo">
+                <img src="./img/logo.png" alt="Imagem da Logo">
             </div>
     
             <div>
@@ -40,7 +40,7 @@
                         RENOVÁVEL <br>
                         INTELIGENTE</span></h1>
     
-                <img src="./img/08-02-23-canal-solar-Renovigi-lanca-linha-propria-de-modulos-fotovoltaicos.jpg" alt="">
+                <img src="./img/08-02-23-canal-solar-Renovigi-lanca-linha-propria-de-modulos-fotovoltaicos.jpg" alt="Imagem Ilustrativa da Energia Solar">
             </div>
         </section>
     </main>
