--- a/como_funciona.html
+++ b/como_funciona.html
@@ -12,7 +12,7 @@
 
         <div>
             <div>
-                <img src="./img/d091426974da40f78a83c72f0f2d8d89 (2).png" alt="Imagem da Logo">
+                <img src="./img/logo.png" alt="Imagem da Logo">
             </div>
 
             <div>
@@ -42,9 +42,9 @@
                 </div>
     
                 <div>
-                    <img src="./img/aaaa.webp" alt="">
-                    <img src="./img/bbbb.png" alt="">
-                    <img src="./img/cccc.webp" alt="">
+                    <img src="./img/placa_energia_solar.webp" alt="Imagem Ilustrativa em desenho de uma placa de energia solar">
+                    <img src="./img/casinha.png" alt="Imagem Ilustrativa em desenho de uma casinha">
+                    <img src="./img/conta_energia.webp" alt="Imagem Ilustrativa em desenho de uma conta de Energia">
                 </div>
     
                 <div>
