--- a/cadastre-se.html
+++ b/cadastre-se.html
@@ -109,7 +109,10 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <p>&copy; 2024 Forever Energia Renovável. Todos os direitos reservados | Desenvolvido por <a href="https://github.com/Jana-ina21" target="_blank">Janaina de Oliveira</a> e <a
+            href="https://github.com/BarbaraFFCampos" target="_blank">Barbara Campos</a></p>
+    </footer>
 </body>
 
 </html>
