Adicionando classes no index.html

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Forever Energia Renovável</title>
 </head>
 
 <body>
-    <header>
+    <header class="header">
 
-        <div>
+        <div class="container">
 
-            <div>
+            <div class="menu">
                 <nav>
                     <ul>
                         <li><a href="index.html"><span>Inicio</span></a></li>
@@ -27,27 +28,26 @@
         </div>
     </header>
 
-    <main>
-        <section>
-            <div>
-                <img src="./img/logo.png" alt="Imagem da Logo">
+    <main class="main">
+        <section class="section">
+            <div class="logo-container">
+                <img class="logo" src="./img/logo.png" alt="Imagem da Logo">
             </div>
     
-            <div>
-                <p><span>CONECTE-SE Á ENERGIA SOLAR E <br>
+            <div class="content">
+                <p class="paragrafo"><span>CONECTE-SE Á ENERGIA SOLAR E <br>
                         ECONOMIZE NA CONTA DE LUZ!</span></p>
-                <h1><span>LIMPA <br>
+                <h1 class="titulo"><span>LIMPA <br>
                         RENOVÁVEL <br>
                         INTELIGENTE</span></h1>
     
-                <img src="./img/08-02-23-canal-solar-Renovigi-lanca-linha-propria-de-modulos-fotovoltaicos.jpg" alt="Imagem Ilustrativa da Energia Solar">
+                <img class="imagem-solar" src="./img/08-02-23-canal-solar-Renovigi-lanca-linha-propria-de-modulos-fotovoltaicos.jpg" alt="Imagem Ilustrativa da Energia Solar">
             </div>
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 Forever Energia Renovável. Todos os direitos reservados | Desenvolvido por <a href="https://github.com/Jana-ina21" target="_blank">Janaina de Oliveira</a> e <a
-            href="https://github.com/BarbaraFFCampos" target="_blank">Barbara Campos</a></p>
+    <footer class="footer">
+        <p class="texto-rodape">&copy; 2024 Forever Energia Renovável. Todos os direitos reservados | Desenvolvido por <a href="https://github.com/Jana-ina21" target="_blank">Janaina de Oliveira</a> e <a href="https://github.com/BarbaraFFCampos" target="_blank">Barbara Campos</a></p>
     </footer>
 </body>
 
