--- a/como_funciona.html
+++ b/como_funciona.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./como_funciona.html">
+    <link rel="stylesheet" href="./estilos/como_funciona.css">
     <title>Como Funciona</title>
 </head>
 
