Adicionando validações no formulario da pagina cadastre-se

--- a/cadastre-se.html
+++ b/cadastre-se.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilos/cadastre-se.css">
     <title>Cadastre-se</title>
+    <script src="./script.js" defer></script>
 </head>
 
 <body>
@@ -112,7 +113,7 @@
                     </div>
     
                     <div class="input-container">
-                        <label for="gasto" class="label">Quanto você gasta de luz por mês?</label>
+                        <label for="gasto" class="label">Quanto você gasta de luz por mês? <span>*</span></label>
                         <input type="number" name="gasto" id="gasto" class="input-gasto" required>
                     </div> 
     
