--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilos/blog.css">
     <title>Blog</title>
+    <script src="./script.js" defer></script>
 </head>
 
 <body>
@@ -73,10 +74,10 @@
             <h2>Deixe seu comentário</h2>
             <form>
               <label for="nome">Nome:</label>
-              <input type="text" id="nome" required>
+              <input type="text" id="nome-comentario" required>
           
               <label for="email">E-mail:</label>
-              <input type="email" id="email" required>
+              <input type="email" id="email-comentario" required>
           
               <label for="comentario">Comentário:</label>
               <textarea id="comentario" rows="4" cols="50" required></textarea>
